--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,35 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>PrjectPart1</groupId>
-  <artifactId>PrjectPart1</artifactId>
+  <groupId>home</groupId>
+  <artifactId>finding_home</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-      <build>
-<sourceDirectory>src/main/java</sourceDirectory>
-<testSourceDirectory>src/test/java</testSourceDirectory>
-<plugins>
-    <plugin>
-    
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.8.1</version>
-    <configuration>
-    <argLine>-Duser.language=en</argLine>
+
+   <build>
+  
+  <sourceDirectory>src/main/java</sourceDirectory>
+  <testSourceDirectory>src/test/java</testSourceDirectory>
+ 
+ <plugins>
+ <plugin>
+ <artifactId>maven-compiler-plugin</artifactId>
+ <version>3.8.1</version>
+ <configuration>
+  <argLine>-Duser.language=en</argLine>
 <argLine>-Xmx1024m</argLine>
 <argLine>-XX:MaxPermSize=256m</argLine>
 <argLine>-Dfile.encoding=UTF-8</argLine>
 <useFile>false</useFile>
-    <source>1.8</source>
-    <target>1.8</target>
-    
-    </configuration>
-    </plugin>
-    </plugins>
-    </build>
+<source>1.8</source>
+<target>1.8</target>
+ </configuration>
 
-  
+      </plugin>
+   </plugins>
+</build>
+ 
+ <dependencies>
+<dependency>
 
-  <dependencies>
-  
-  <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-java</artifactId>
     <version>5.1.0</version>
@@ -41,17 +41,11 @@
     <version>5.1.0</version>
     <scope>test</scope>
 </dependency>
-
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-picocontainer</artifactId>
     <version>5.1.0</version>
     <scope>test</scope>
 </dependency>
-
-
-  </dependencies>
-  
-  
-
+   </dependencies>
 </project>
