--- a/pom.xml
+++ b/pom.xml
@@ -1,62 +1,65 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>home</groupId>
-  <artifactId>finding_home</artifactId>
+  <groupId>ApartmentSearch</groupId>
+  <artifactId>ApartmentSearchApp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
-   <build>
   
-  <sourceDirectory>src/main/java</sourceDirectory>
-  <testSourceDirectory>src/test/java</testSourceDirectory>
+    
+  <build>
  
- <plugins>
- <plugin>
- <artifactId>maven-compiler-plugin</artifactId>
- <version>3.8.1</version>
- <configuration>
-  <argLine>-Duser.language=en</argLine>
-<argLine>-Xmx1024m</argLine>
-<argLine>-XX:MaxPermSize=256m</argLine>
-<argLine>-Dfile.encoding=UTF-8</argLine>
-<useFile>false</useFile>
-<source>1.8</source>
-<target>1.8</target>
- </configuration>
+     <sourceDirectory>src/main/java</sourceDirectory>
+     <testSourceDirectory>src/test/java</testSourceDirectory>
+     <pluginManagement>
+        <plugins>
+        <plugin>
+    <groupId>org.sonarsource.scanner.maven</groupId>
+   <artifactId>sonar-maven-plugin</artifactId>
+ <version>3.7.0.1746</version>
+        </plugin>
+           <plugin>
+           
+               <artifactId>maven-compiler-plugin</artifactId>
+               <version>3.8.0</version>
+                   <configuration>
+                         <source>1.8</source>
+                         <target>1.9</target>
+                   </configuration>
+                   
+           </plugin>
+           
+        </plugins>
+        </pluginManagement>
+  </build>
+  
+  
+  <dependencies>
 
-      </plugin>
-   </plugins>
-</build>
- 
- <dependencies>
-<dependency>
 
-    <groupId>io.cucumber</groupId>
-    <artifactId>cucumber-java</artifactId>
-    <version>5.1.0</version>
-</dependency>
+     <dependency>
+       <groupId>io.cucumber</groupId>
+       <artifactId>cucumber-java</artifactId>
+       <version>5.1.0</version>
+     </dependency>
 
-<dependency>
-    <groupId>io.cucumber</groupId>
-    <artifactId>cucumber-junit</artifactId>
-    <version>5.1.0</version>
-    <scope>test</scope>
-</dependency>
-<dependency>
-    <groupId>io.cucumber</groupId>
-    <artifactId>cucumber-picocontainer</artifactId>
-    <version>5.1.0</version>
-    <scope>test</scope>
-</dependency>
-<dependency>
-  <groupId>junit</groupId>     <!-- NOT org.junit here -->
-  <artifactId>junit-dep</artifactId>
-  <version>4.8.2</version>
-  <scope>test</scope>
-</dependency>
-<dependency>
-<groupId>org.assertj</groupId>
-<artifactId>assertj-core</artifactId>
-<version>3.9.1</version>
-</dependency>
-   </dependencies>
+
+
+     <dependency>
+       <groupId>io.cucumber</groupId>
+       <artifactId>cucumber-junit</artifactId>
+       <version>5.1.0</version>
+       <scope>test</scope>
+     </dependency>
+     
+
+      <dependency>
+       <groupId>io.cucumber</groupId>
+       <artifactId>cucumber-picocontainer</artifactId>
+       <version>5.1.0</version>
+       <scope>test</scope>
+     </dependency>
+
+
+
+
+ </dependencies>
 </project>
