--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,18 @@
   
   <dependencies>
 
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.3.3</version>
+  
+</dependency>
+
+<dependency>
+	<groupId>com.sun.mail</groupId>
+	<artifactId>javax.mail</artifactId>
+	<version>1.5.5</version>
+</dependency>
 
      <dependency>
        <groupId>io.cucumber</groupId>
@@ -57,7 +69,6 @@
        <version>5.1.0</version>
        <scope>test</scope>
      </dependency>
-
 
 
 
